<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_farming_type"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"/>

            <RadioGroup
                android:id="@+id/radioGroupFarmingType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edittext_outline_box"
                android:padding="8dp"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/radioOrganic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Organic" />

                <RadioButton
                    android:id="@+id/radioInorganic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Inorganic" />
            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_outline_box"
                android:layout_marginBottom="16dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_subcategory"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerSubcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_outline_box"
                android:layout_marginBottom="16dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_with_unit"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/editQuantity"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="Enter Quantity"
                    android:inputType="number"
                    android:background="@drawable/edittext_outline_box"
                    android:padding="12dp" />

                <Spinner
                    android:id="@+id/spinnerUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_outline_box"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_base_price"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editBasePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Base Price"
                android:inputType="numberDecimal"
                android:background="@drawable/edittext_outline_box"
                android:padding="12dp"
                android:layout_marginBottom="16dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtAddress"
                android:text="Add Address"
                android:textColor="@android:color/holo_green_dark"
                android:padding="12dp"
                android:background="@drawable/edittext_outline_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected_delivery"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editExpectedDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Delivery Time"
                android:inputType="number"
                android:background="@drawable/edittext_outline_box"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/editProductDescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="Write a brief description of your product"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:background="@drawable/edittext_outline_box"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_images"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose up to 5 Images"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/green"
                android:textColor="#FFF" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewImages"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:background="#EEEEEE" />

            <Button
                android:id="@+id/btnPostProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Post Product"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/green"
                android:textColor="#FFF" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
